Fixed: table size, add whitespace nowrap

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -164,3 +164,6 @@ body {
 .btn-primary {
     background-color: #0080c8;
 }
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    white-space: nowrap;
+}
